--- a/css/style4.css
+++ b/css/style4.css
@@ -8,7 +8,9 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
 }
-
+.icc {
+     width: 40%;
+}
 
 a, a:hover, a:focus {
     color: inherit;
